# TOPSIS

./: LICENSE  README.md  pyproject.toml
app/: page.tsx
app/api/send-email/: route.ts
topsis/: core.py
