[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-Krit-102303213"
version = "0.1.0"
description = "TOPSIS CLI implementation by Krit Mukul (102303213)"
readme = "README.md"
authors = [{name = "Krit Mukul", email = "mukulkrit14@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.scripts]
topsis-cli = "topsis.core:cli"

[tool.setuptools.packages.find]
where = [""]
include = ["topsis*"]

